--- a/css/common.css
+++ b/css/common.css
@@ -41,7 +41,7 @@ ul, ol {
   padding: 15px; }
 
 .primary-btn {
-  background-color: #2E4276;
+  background-color: #2966FF;
   border-radius: 34px;
   color: #fff;
   font-weight: 500;
@@ -200,7 +200,8 @@ button {
     font-size: 16px;
     font-weight: 700;
     display: flex;
-    align-items: center; }
+    align-items: center;
+    color: #2E4276; }
   .sec-title-block.sec-title-filter {
     display: flex;
     align-items: center;
@@ -247,7 +248,7 @@ button {
     min-width: 190px;
     border: 1px solid #E3E4F3;
     background: #FFF;
-    color: #697F9B;
+    color: #8393BA;
     font-size: 14px;
     padding: 8px 25px;
     font-weight: 400;
@@ -317,7 +318,7 @@ button {
     padding-right: 5px; } }
 .inp-block .form-label {
   width: 100%;
-  color: #697F9B;
+  color: #8393BA;
   font-weight: 500;
   font-size: 12px;
   margin-bottom: 8px; }
@@ -424,7 +425,7 @@ button {
   border-radius: 20px;
   border: 1px solid #E3E4F3 !important;
   background: #FFF !important;
-  color: #697F9B;
+  color: #8393BA;
   justify-content: space-between;
   display: inline-flex;
   align-items: center; }
@@ -474,7 +475,7 @@ button {
     background: #F7F7FC;
     padding: 20px 25px; }
     .filter-dropdown-menu .filter-form-content .price-range-block .price-title {
-      color: #697F9B;
+      color: #8393BA;
       font-size: 14px;
       margin-bottom: 15px; }
       .filter-dropdown-menu .filter-form-content .price-range-block .price-title .value {
@@ -590,7 +591,7 @@ button {
   padding: 10vh 15px; }
   .table-no-data p {
     padding-top: 15px;
-    color: #000;
+    color: #2E4276;
     font-family: "Poppins", sans-serif;
     font-size: 16px;
     font-weight: 600;
