--- a/css/modal.css
+++ b/css/modal.css
@@ -10,8 +10,8 @@
 /*** WSXGA (Wide Super Extended Graphics Array) resolution ***/
 /* placeholder mixin */
 .modal-backdrop.show {
-  background: #01040B;
-  opacity: 0.75; }
+  background: rgba(0, 0, 0, 0.4);
+  backdrop-filter: blur(2px); }
 
 .custom-modal {
   font-family: "Poppins", sans-serif; }
@@ -55,7 +55,8 @@
       transition: .3s;
       display: inline-flex;
       align-items: center;
-      justify-content: center; }
+      justify-content: center;
+      font-weight: 400; }
       .custom-modal .btn-cover-modal .btn .spinner-border {
         width: 20px;
         height: 20px; }
@@ -69,12 +70,16 @@
       @media (max-width: 579px) {
         .custom-modal .btn-cover-modal .btn {
           width: 100px; } }
+    .custom-modal .btn-cover-modal .btn-border {
+      color: #4D6090 !important;
+      border-color: #4D6090 !important;
+      font-weight: 400; }
     .custom-modal .btn-cover-modal .btn-save {
-      background-color: #0DAD4D;
+      background-color: #2966FF;
       color: #fff; }
     .custom-modal .btn-cover-modal .btn-prmary {
       color: #fff !important;
-      background-color: #2E4276 !important; }
+      background-color: #2966FF !important; }
   .custom-modal .modal-title h2 {
     margin-bottom: 40px;
     font-size: 24px;
@@ -106,16 +111,29 @@
     .custom-modal .inp-block-modal .custom-inp {
       width: 100%;
       border-radius: 8px;
-      border: 1px solid #D1D1D7;
+      border: 1px solid #B6C3E5;
       background: #FFF;
       font-size: 14px;
-      color: #000;
-      padding: 10px 20px; }
+      color: #2E4276;
+      padding: 10px 15px; }
     .custom-modal .inp-block-modal .custom-inp-disable {
       background-color: #F8F8F8;
       border-color: #F8F8F8; }
     .custom-modal .inp-block-modal .alert-msg {
       left: 0; }
+  .custom-modal .modal-info-cover .modal-info-block {
+    background-color: #FFF6E1;
+    color: #85744C;
+    font-size: 12px;
+    padding: 15px 22px;
+    border-radius: 20px;
+    display: inline-flex;
+    padding-right: 50px; }
+    .custom-modal .modal-info-cover .modal-info-block img {
+      margin-right: 8px; }
+    @media (max-width: 1679px) {
+      .custom-modal .modal-info-cover .modal-info-block {
+        padding: 12px 20px; } }
 
 @media (max-width: 1679px) {
   .custom-modal .modal-header {
@@ -131,7 +149,7 @@
     margin-bottom: 20px; }
 
   .custom-modal .inp-block-modal .custom-inp {
-    padding: 8px 18px; }
+    padding: 8px 15px; }
 
   .custom-modal .inp-block-modal textarea {
     height: 85px; }
@@ -140,10 +158,7 @@
     font-size: 13px; } }
 @media (max-width: 579px) {
   .custom-modal .modal-body {
-    padding-top: 0; }
-
-  .custom-modal .inp-block-modal .custom-inp {
-    padding: 8px 15px; } }
+    padding-top: 0; } }
 .conect-wallet {
   display: flex;
   flex-wrap: wrap;
@@ -161,7 +176,7 @@
     font-weight: 400;
     line-height: 163.5%; }
   .conect-wallet .wallet-title {
-    color: #292D32;
+    color: #2E4276;
     text-align: center;
     font-size: 24px;
     font-style: normal;
@@ -183,19 +198,18 @@
       display: flex;
       align-items: center;
       justify-content: flex-start;
-      color: #697F9B;
       font: 500 16px/22px "Poppins", sans-serif;
       padding: 5px 15px;
       border-radius: 8px;
       border: 1px solid #E3E4F3;
       background: #FFF;
+      color: #2E4276;
       flex: 1 1 0%;
       height: 64px;
       box-shadow: none; }
       .conect-wallet .walles-otr .wallet-btn:hover, .conect-wallet .walles-otr .wallet-btn.active {
-        border: 1px solid #292D32;
-        background: #F3F4FA;
-        color: #292D32; }
+        border: 1px solid #2966FF;
+        background: #EDF2FF; }
       .conect-wallet .walles-otr .wallet-btn .wallet-icon {
         border: 1px solid #ddd;
         width: 30px;
@@ -242,7 +256,7 @@
   text-align: center; }
   .connect-wallet-modal .btn-cover .primary-btn {
     width: 240px;
-    background-color: #2E4276;
+    background-color: #2966FF;
     color: #fff;
     border: none; }
 
@@ -417,7 +431,7 @@
   padding: 15px 64px 70px; }
   @media (max-width: 1679px) {
     .crate-stake-modal .crate-stake-modal-body {
-      padding: 0 60px 40px; } }
+      padding: 0 60px 30px; } }
   @media (max-width: 1199px) {
     .crate-stake-modal .crate-stake-modal-body {
       padding: 0 40px 30px; } }
@@ -427,12 +441,57 @@
 @media (min-width: 767px) and (max-width: 991px) {
   .crate-stake-modal .modal-dialog {
     max-width: 700px; } }
+.crate-stake-modal .btn-cover-modal {
+  margin-top: 15px; }
+.crate-stake-modal .modal-info-cover {
+  padding-top: 15px; }
+.crate-stake-modal .img-box-cover {
+  display: flex;
+  align-items: center;
+  max-height: 43px; }
+  @media (max-width: 1679px) {
+    .crate-stake-modal .img-box-cover {
+      max-height: 40px; } }
+  .crate-stake-modal .img-box-cover .img-name-block {
+    flex: 1 1 auto;
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+    padding-right: 5px; }
+    .crate-stake-modal .img-box-cover .img-name-block .img-name {
+      display: -webkit-box;
+      -webkit-line-clamp: 1;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      color: #2E4276;
+      font-size: 13px;
+      max-width: calc(100% - 22px); }
+      @media (max-width: 1679px) {
+        .crate-stake-modal .img-box-cover .img-name-block .img-name {
+          font-size: 12px; } }
+    .crate-stake-modal .img-box-cover .img-name-block .img-remove-btn {
+      flex-shrink: 0;
+      background-color: transparent;
+      border: none;
+      padding: 0;
+      transition: .3s;
+      margin-left: 8px; }
+      .crate-stake-modal .img-box-cover .img-name-block .img-remove-btn:hover {
+        opacity: .8; }
+  .crate-stake-modal .img-box-cover .img-select-btn {
+    flex: 0 0 auto;
+    background-color: #E2E9F9;
+    color: #2E4276;
+    font-size: 13px;
+    padding: 4px 25px;
+    border-radius: 8px; }
+    @media (max-width: 1679px) {
+      .crate-stake-modal .img-box-cover .img-select-btn {
+        font-size: 12px; } }
 
-.success-modal .modal-dialog {
-  max-width: 700px; }
-  @media (max-width: 765px) {
-    .success-modal .modal-dialog {
-      max-width: 96%; } }
+@media (min-width: 992px) {
+  .success-modal .modal-dialog {
+    max-width: 700px; } }
 .success-modal .modal-body {
   padding: 15px 50px 55px; }
   @media (max-width: 575px) {
@@ -445,7 +504,7 @@
       margin-bottom: 15px; }
       @media (max-width: 1679px) {
         .success-modal .modal-body .modal-title img {
-          height: 55px; } }
+          height: 60px; } }
     .success-modal .modal-body .modal-title h2 {
       color: #2E4276;
       font-size: 21px;
@@ -780,6 +839,26 @@
       background-color: #F3F4FA;
       border-radius: 50%;
       margin-right: 15px; }
+  .claim-reward-modal .claim-reward-modal-body .claim-det-cover {
+    padding-top: 40px; }
+    .claim-reward-modal .claim-reward-modal-body .claim-det-cover .claim-det-row {
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 25px; }
+      .claim-reward-modal .claim-reward-modal-body .claim-det-cover .claim-det-row .claim-det-label {
+        display: inline-flex;
+        align-items: center;
+        color: #697F9B;
+        font-size: 14px;
+        font-weight: 500; }
+        .claim-reward-modal .claim-reward-modal-body .claim-det-cover .claim-det-row .claim-det-label img {
+          margin-right: 8px; }
+      .claim-reward-modal .claim-reward-modal-body .claim-det-cover .claim-det-row .claim-det-count {
+        color: #697F9B;
+        font-size: 14px;
+        font-weight: 600; }
+        .claim-reward-modal .claim-reward-modal-body .claim-det-cover .claim-det-row .claim-det-count.txt-green {
+          color: #0DAD4D; }
   .claim-reward-modal .claim-reward-modal-body .claim-count-block {
     padding-top: 25px; }
     .claim-reward-modal .claim-reward-modal-body .claim-count-block p {
@@ -792,15 +871,61 @@
       font-size: 23px;
       font-weight: 600; }
   .claim-reward-modal .claim-reward-modal-body .btn-otr {
-    padding-top: 40px; }
+    padding-top: 10px; }
     .claim-reward-modal .claim-reward-modal-body .btn-otr .claim-btn {
       width: 100%;
-      background-color: #0DAD4D;
+      background-color: #2966FF;
       color: #fff;
-      transition: .3s; }
+      transition: .3s;
+      padding: 12px 15px; }
       .claim-reward-modal .claim-reward-modal-body .btn-otr .claim-btn:hover {
         opacity: .8; }
+  .claim-reward-modal .claim-reward-modal-body .modal-info-cover {
+    padding-top: 15px; }
+    .claim-reward-modal .claim-reward-modal-body .modal-info-cover .modal-info-block {
+      width: 100%; }
+  .claim-reward-modal .claim-reward-modal-body .connected-wallet-block {
+    margin-top: 40px; }
+    .claim-reward-modal .claim-reward-modal-body .connected-wallet-block .wallet-label {
+      display: flex;
+      align-items: center;
+      font-size: 14px;
+      color: #697F9B;
+      margin-bottom: 5px; }
+      .claim-reward-modal .claim-reward-modal-body .connected-wallet-block .wallet-label img {
+        margin-right: 12px;
+        max-height: 14px; }
+    .claim-reward-modal .claim-reward-modal-body .connected-wallet-block .wallet-addrs {
+      width: 100%;
+      padding: 14px 27px;
+      background-color: #F5F9FF;
+      border: solid 1px #DEEDFF;
+      color: #2B405B;
+      border-radius: 28px;
+      font-size: 13px;
+      word-break: break-all; }
+.claim-reward-modal.aptos-modal .claim-reward-modal-body .modal-title h4 .title-icon {
+  width: 38px;
+  height: 38px; }
+  .claim-reward-modal.aptos-modal .claim-reward-modal-body .modal-title h4 .title-icon img {
+    width: 18px; }
+.claim-reward-modal.aptos-modal .aptos-text-block {
+  padding: 30px 0 15px;
+  color: #697F9B;
+  font-size: 14px; }
 
+@media (max-width: 1679px) {
+  .claim-reward-modal .claim-reward-modal-body .claim-det-cover {
+    padding-top: 30px; }
+
+  .claim-reward-modal .claim-reward-modal-body .claim-det-cover .claim-det-row {
+    margin-bottom: 20px; }
+
+  .claim-reward-modal .claim-reward-modal-body .connected-wallet-block {
+    margin-top: 30px; }
+
+  .claim-reward-modal .claim-reward-modal-body {
+    padding: 0 60px 35px; } }
 @media (max-width: 1441px) {
   .claim-reward-modal .claim-reward-modal-body .modal-title h4 {
     font-size: 19px; }
@@ -811,13 +936,124 @@
     .claim-reward-modal .claim-reward-modal-body .modal-title h4 .title-icon img {
       width: 26px; } }
 @media (max-width: 991px) {
+  .claim-reward-modal .modal-body {
+    padding-top: 0; }
+
   .claim-reward-modal .claim-reward-modal-body {
-    padding: 0 35px 40px; } }
+    padding: 0 35px 25px; } }
 @media (max-width: 579px) {
   .claim-reward-modal .claim-reward-modal-body .claim-count-block h4 {
     font-size: 21px; } }
 @media (max-width: 479px) {
   .claim-reward-modal .claim-reward-modal-body {
     padding: 0 15px 30px; } }
+@media (min-width: 991px) {
+  .choose-avatar-modal .modal-dialog {
+    max-width: 800px; } }
+@media (min-width: 1441px) {
+  .choose-avatar-modal .modal-dialog {
+    max-width: 820px; } }
+@media (min-width: 1680px) {
+  .choose-avatar-modal .modal-dialog {
+    max-width: 890px; } }
+.choose-avatar-modal .choose-avatar-modal-body .modal-title {
+  text-align: center; }
+  .choose-avatar-modal .choose-avatar-modal-body .modal-title h2 {
+    margin-bottom: 15px; }
+  .choose-avatar-modal .choose-avatar-modal-body .modal-title p {
+    color: #697F9B;
+    max-width: 550px;
+    margin: 0 auto;
+    font-size: 14px; }
+.choose-avatar-modal .choose-avatar-modal-body .avatar-block-row {
+  display: flex;
+  padding: 0 15px;
+  padding-top: 30px; }
+  .choose-avatar-modal .choose-avatar-modal-body .avatar-block-row .avatar-card {
+    width: calc(100% / 4);
+    padding: 15px 10px; }
+    .choose-avatar-modal .choose-avatar-modal-body .avatar-block-row .avatar-card .avatar-select-btn {
+      transition: .3s;
+      border-radius: 8px;
+      border: 1px solid #D6E1FF;
+      height: 160px;
+      width: 100%;
+      background: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      padding: 15px; }
+      .choose-avatar-modal .choose-avatar-modal-body .avatar-block-row .avatar-card .avatar-select-btn .select-toggle {
+        position: absolute;
+        left: 10px;
+        top: 10px;
+        width: 16px;
+        height: 16px;
+        display: inline-block;
+        border-radius: 50%;
+        border: solid 1px #D6E1FF;
+        background-color: #F0F4FF; }
+      .choose-avatar-modal .choose-avatar-modal-body .avatar-block-row .avatar-card .avatar-select-btn img {
+        max-width: 100%;
+        max-height: 95%; }
+      .choose-avatar-modal .choose-avatar-modal-body .avatar-block-row .avatar-card .avatar-select-btn.active {
+        background-color: #EDF2FF;
+        border-color: #2966FF; }
+        .choose-avatar-modal .choose-avatar-modal-body .avatar-block-row .avatar-card .avatar-select-btn.active .select-toggle {
+          background-color: #2966FF;
+          box-shadow: inset 0 0 0px 3px #fff;
+          border-color: #2966FF; }
+      .choose-avatar-modal .choose-avatar-modal-body .avatar-block-row .avatar-card .avatar-select-btn:hover {
+        border-color: #2966FF; }
+.choose-avatar-modal .btn-black {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  color: #fff !important; }
+.choose-avatar-modal .btn-block {
+  padding-top: 40px; }
+.choose-avatar-modal .choose-avatar-modal-body {
+  padding: 15px 60px 60px; }
+
+@media (max-width: 1679px) {
+  .choose-avatar-modal .choose-avatar-modal-body {
+    padding: 10px 40px 40px; }
+
+  .choose-avatar-modal .btn-block {
+    padding-top: 25px; }
+
+  .choose-avatar-modal .choose-avatar-modal-body .avatar-block-row .avatar-card .avatar-select-btn {
+    height: 140px; }
+
+  .choose-avatar-modal .btn-black {
+    min-width: 190px; } }
+@media (max-width: 991px) {
+  .choose-avatar-modal .choose-avatar-modal-body {
+    padding: 0 10px 20px; }
+
+  .choose-avatar-modal .btn-block {
+    padding-top: 25px; }
+
+  .choose-avatar-modal .choose-avatar-modal-body .avatar-block-row .avatar-card .avatar-select-btn {
+    height: 120px; }
+
+  .choose-avatar-modal .choose-avatar-modal-body .modal-title p {
+    font-size: 12px; }
+
+  .choose-avatar-modal .choose-avatar-modal-body .avatar-block-row {
+    flex-wrap: wrap;
+    padding: 0;
+    padding-top: 15px; }
+
+  .choose-avatar-modal .choose-avatar-modal-body .avatar-block-row .avatar-card {
+    width: calc(100% / 2); }
+
+  .choose-avatar-modal .btn-block {
+    padding-top: 0; } }
+@media (max-width: 579px) {
+  .choose-avatar-modal .choose-avatar-modal-body {
+    padding: 0 0 20px; } }
 
 /*# sourceMappingURL=modal.css.map */
