--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -1,8 +1,7 @@
 @import "partials/partials";
-
 .modal-backdrop.show {
-    background: #01040B;
-    opacity: 0.75;
+    background: rgba(0, 0, 0, 0.40);
+    backdrop-filter: blur(2px);
 }
 
 .custom-modal {
@@ -62,6 +61,7 @@
             display: inline-flex;
             align-items: center;
             justify-content: center;
+            font-weight: 400;
             .spinner-border{
                 width: 20px;
                 height: 20px;
@@ -78,13 +78,18 @@
                 width: 100px;
             }
         }
+        .btn-border{
+            color: $input-text-color !important;
+            border-color: $input-text-color !important;
+            font-weight: 400;
+        }
         .btn-save{
-            background-color: $success-green;
+            background-color: $primary-blue;
             color: $primary-light;
         }
         .btn-prmary{
             color: #fff !important;
-            background-color: $primary-dark !important;
+            background-color: $primary-blue !important;
         }
     }
     .modal-title{
@@ -123,11 +128,11 @@
         .custom-inp{
             width: 100%;
             border-radius: 8px;
-            border: 1px solid #D1D1D7;
+            border: 1px solid $border-grey-1;
             background: #FFF;
             font-size: 14px;
-            color: #000;
-            padding: 10px 20px;
+            color: $primary-dark;
+            padding: 10px 15px;
         }
         .custom-inp-disable{
             background-color: #F8F8F8;
@@ -135,6 +140,23 @@
         }
         .alert-msg{
             left: 0;
+        }
+    }
+    .modal-info-cover{
+        .modal-info-block{
+            background-color: #FFF6E1;
+            color: #85744C;
+            font-size: 12px;
+            padding: 15px 22px;
+            border-radius: 20px;
+            display: inline-flex;
+            padding-right: 50px;
+            img{
+                margin-right: 8px;
+            }
+            @media($sm-1679){
+                padding: 12px 20px;
+            }
         }
     }
 }
@@ -153,7 +175,7 @@
         margin-bottom: 20px;
     }
     .custom-modal .inp-block-modal .custom-inp{
-        padding: 8px 18px;
+        padding: 8px 15px;
     }
     .custom-modal .inp-block-modal textarea{
         height: 85px;
@@ -165,9 +187,6 @@
 @media($sm-579){
     .custom-modal .modal-body{
         padding-top: 0;
-    }
-    .custom-modal .inp-block-modal .custom-inp{
-        padding: 8px 15px;
     }
 }
 
@@ -182,7 +201,7 @@
     p {
         margin: 0 auto;
         max-width: 550px;
-        color: #697F9B;
+        color:$label-txt-blue;
         text-align: center;
         font-size: 14px;
         font-style: normal;
@@ -191,7 +210,7 @@
     }
 
     .wallet-title {
-        color: #292D32;
+        color: $primary-dark;
         text-align: center;
         font-size: 24px;
         font-style: normal;
@@ -216,20 +235,19 @@
             display: flex;
             align-items: center;
             justify-content: flex-start;
-            color: #697F9B;
             font: 500 16px/22px $font-primary;
             padding: 5px 15px;
             border-radius: 8px;
             border: 1px solid #E3E4F3;
             background: #FFF;
+            color: $primary-dark;
             flex: 1 1 0%;
             height: 64px;
             box-shadow: none;
             &:hover,
             &.active {
-                border: 1px solid #292D32;
-                background: #F3F4FA;
-                color: #292D32;
+                border: 1px solid $primary-blue;
+                background: #EDF2FF;
             }
             
 
@@ -302,7 +320,7 @@
         text-align: center;
         .primary-btn{
             width: 240px;
-            background-color: $primary-dark;
+            background-color: $primary-blue;
             color: #fff;
             border: none;
         }
@@ -524,7 +542,7 @@
     .crate-stake-modal-body{
         padding: 15px 64px 70px;
         @media($sm-1679){
-            padding: 0 60px 40px;
+            padding: 0 60px 30px;
         }
         @media($sm-1199){
             padding: 0 40px 30px;
@@ -538,16 +556,73 @@
             max-width: 700px;
         }
     }
+    .btn-cover-modal{
+        margin-top: 15px;
+    }
+    .modal-info-cover{
+        padding-top: 15px;
+    }
+    .img-box-cover{
+        display: flex;
+        align-items: center;
+        max-height: 43px;
+        @media($sm-1679){
+            max-height: 40px;
+        }
+        .img-name-block{
+            flex: 1 1 auto;
+            display: flex;
+            align-items: center;
+            flex-wrap: nowrap;
+            padding-right: 5px;
+            .img-name{
+                display: -webkit-box;
+                -webkit-line-clamp: 1;
+                -webkit-box-orient: vertical;  
+                overflow: hidden;
+                color: $primary-dark;
+                font-size: 13px;
+                max-width: calc(100% - 22px);
+                @media($sm-1679){
+                    font-size: 12px;
+                }
+            }
+            .img-remove-btn{
+                flex-shrink: 0;
+                background-color: transparent;
+                border: none;
+                padding: 0;
+                transition: .3s;
+                margin-left: 8px;
+                &:hover{
+                    opacity: .8;
+                }
+            }
+        }
+        .img-select-btn{
+            flex: 0 0 auto;
+            background-color: #E2E9F9;
+            color: $primary-dark;
+            font-size: 13px;
+            padding: 4px 25px;
+            border-radius: 8px;
+            @media($sm-1679){
+                font-size: 12px;
+            }
+        }
+    }
 }
 .success-modal
 {
     .modal-dialog
     {
-        max-width: 700px;
-        @media(max-width:765px)
-        {
-            max-width:96%;
+        @media(min-width:992px){
+            max-width: 700px;
         }
+        // @media(max-width:765px)
+        // {
+        //     max-width:96%;
+        // }
     }
     .modal-body
     {
@@ -565,7 +640,7 @@
                 margin-bottom: 15px;
                 @media(max-width:1679px)
                 {
-                    height: 55px;
+                    height: 60px;
                 }
             }
             h2
@@ -585,7 +660,7 @@
             }
             h5
             {
-                color: #697F9B;
+                color:$label-txt-blue;
                 font-size: 18px;
                 font-weight: 400;
                 @media(max-width:1679px)
@@ -607,7 +682,7 @@
                 display: flex;
                 justify-content: space-between;
                 margin-bottom: 10px;
-                color: #697F9B;
+                color:$label-txt-blue;
                 @media(max-width:575px)
                 {
                     flex-direction: column;
@@ -616,7 +691,7 @@
                     display: flex;
                     justify-content: space-between;
                     margin-bottom: 10px;
-                    color: #697F9B;
+                    color:$label-txt-blue;
                     font-weight: 400;
                     font-size: 14px;
                     @media(max-width:1679px)
@@ -895,7 +970,7 @@
                     margin-bottom:20px;
                     label
                     {
-                        color: #697F9B;
+                        color:$label-txt-blue;
                         font-size: 14px;
                     }
                     .form-control
@@ -1054,10 +1129,36 @@
                 }
             }
         }
+        .claim-det-cover{
+            padding-top: 40px;
+            .claim-det-row{
+                align-items: center;
+                justify-content: space-between;
+                margin-bottom: 25px;
+                .claim-det-label{
+                    display: inline-flex;
+                    align-items: center;
+                    color: $label-txt-blue;
+                    font-size: 14px;
+                    font-weight: 500;
+                    img{
+                        margin-right: 8px;
+                    }
+                }
+                .claim-det-count{
+                    color: $label-txt-blue;
+                    font-size: 14px;
+                    font-weight: 600;
+                    &.txt-green{
+                        color: $success-green;
+                    }
+                }
+            }
+        }
         .claim-count-block{
             padding-top: 25px;
             p{
-                color: #697F9B;
+                color:$label-txt-blue;
                 font-size: 13px;
                 font-weight: 500;
                 margin-bottom: 5px;
@@ -1069,17 +1170,76 @@
             }
         }
         .btn-otr{
-            padding-top: 40px;
+            padding-top: 10px;
             .claim-btn{
                 width: 100%;
-                background-color: $success-green;
+                background-color: $primary-blue;
                 color: $primary-light;
                 transition: .3s;
+                padding: 12px 15px;
                 &:hover{
                     opacity: .8;
                 }
             }
         }
+        .modal-info-cover{
+            padding-top: 15px;
+            .modal-info-block{
+                width: 100%;
+            }
+        }
+        .connected-wallet-block{
+            margin-top: 40px;
+            .wallet-label{
+                display: flex;
+                align-items: center;
+                font-size: 14px;
+                color: $label-txt-blue;
+                margin-bottom: 5px;
+                img{
+                    margin-right: 12px;
+                    max-height: 14px;
+                }
+            }
+            .wallet-addrs{
+                width: 100%;
+                padding: 14px 27px;
+                background-color: #F5F9FF;
+                border: solid 1px #DEEDFF;
+                color: #2B405B;
+                border-radius: 28px;
+                font-size: 13px;
+                word-break: break-all;
+            }
+        }
+    }
+    &.aptos-modal{
+       .claim-reward-modal-body .modal-title h4 .title-icon{
+           width: 38px;
+           height: 38px;
+           img{
+            width: 18px;
+           }
+       }
+       .aptos-text-block{
+            padding: 30px 0 15px;
+            color: $label-txt-blue;
+            font-size: 14px;
+       }
+    }
+}
+@media($sm-1679){
+    .claim-reward-modal .claim-reward-modal-body .claim-det-cover {
+        padding-top: 30px;
+    }
+    .claim-reward-modal .claim-reward-modal-body .claim-det-cover .claim-det-row{
+        margin-bottom: 20px;
+    }
+    .claim-reward-modal .claim-reward-modal-body .connected-wallet-block {
+        margin-top: 30px;
+    }
+    .claim-reward-modal .claim-reward-modal-body {
+        padding: 0 60px 35px;
     }
 }
 @media($sm-1441){
@@ -1095,8 +1255,11 @@
     }
 }
 @media($sm-991){
+    .claim-reward-modal .modal-body{
+        padding-top: 0;
+    }
     .claim-reward-modal .claim-reward-modal-body {
-        padding: 0 35px 40px;
+        padding: 0 35px 25px;
     }
 }
 @media($sm-579){
@@ -1107,5 +1270,140 @@
 @media($sm-479){
     .claim-reward-modal .claim-reward-modal-body {
         padding: 0 15px 30px;
+    }
+}
+
+// Choose avatar
+.choose-avatar-modal{
+    .modal-dialog{
+        @media (min-width: 991px) {
+            max-width: 800px;
+        }
+        @media (min-width: 1441px) {
+            max-width: 820px;
+        }
+        @media (min-width: 1680px) {
+            max-width: 890px;
+        }
+    }
+    .choose-avatar-modal-body{
+        .modal-title{
+            text-align: center;
+            h2{
+                margin-bottom: 15px;
+            }
+            p{
+                color: $label-txt-blue;
+                max-width: 550px;
+                margin: 0 auto;
+                font-size: 14px;
+            }
+        }
+        .avatar-block-row{
+            display: flex;
+            padding: 0 15px;
+            padding-top: 30px;
+            .avatar-card{
+                width: calc(100% / 4);
+                padding: 15px 10px;
+                .avatar-select-btn{
+                    transition: .3s;
+                    border-radius: 8px;
+                    border: 1px solid #D6E1FF;
+                    height: 160px;
+                    width: 100%;
+                    background: $primary-light;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    position: relative;
+                    padding: 15px;
+                    .select-toggle{
+                        position: absolute;
+                        left: 10px;
+                        top: 10px;
+                        width: 16px;
+                        height: 16px;
+                        display: inline-block;
+                        border-radius: 50%;
+                        border: solid 1px #D6E1FF;
+                        background-color: #F0F4FF;
+                    }
+                    img{
+                        max-width: 100%;
+                        max-height: 95%;
+                    }
+                    &.active{
+                        background-color: #EDF2FF;
+                        border-color: $primary-blue;
+                        .select-toggle{
+                            background-color: $primary-blue;
+                            box-shadow: inset 0 0 0px 3px #fff;
+                            border-color: $primary-blue;
+                        }
+                    }
+                    &:hover{
+                        border-color: $primary-blue;
+                    }
+                }
+            }
+        }
+    }
+    .btn-black{
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        text-decoration: none;
+        color: $primary-light !important;
+    }
+    .btn-block{
+        padding-top: 40px;
+    }
+    .choose-avatar-modal-body{
+        padding: 15px 60px 60px;
+    }
+}
+@media($sm-1679){
+    .choose-avatar-modal .choose-avatar-modal-body {
+        padding: 10px 40px 40px;
+    }
+    .choose-avatar-modal .btn-block {
+        padding-top: 25px;
+    }
+    .choose-avatar-modal .choose-avatar-modal-body .avatar-block-row .avatar-card .avatar-select-btn{
+        height: 140px;
+    }
+    .choose-avatar-modal .btn-black{
+        min-width: 190px;
+    }
+}
+@media($sm-991){
+    .choose-avatar-modal .choose-avatar-modal-body {
+        padding: 0 10px 20px;
+    }
+    .choose-avatar-modal .btn-block {
+        padding-top: 25px;
+    }
+    .choose-avatar-modal .choose-avatar-modal-body .avatar-block-row .avatar-card .avatar-select-btn{
+        height: 120px;
+    }
+    .choose-avatar-modal .choose-avatar-modal-body .modal-title p{
+        font-size: 12px;
+    }
+    .choose-avatar-modal .choose-avatar-modal-body .avatar-block-row {
+        flex-wrap: wrap;
+        padding: 0;
+        padding-top: 15px;
+    }
+    .choose-avatar-modal .choose-avatar-modal-body .avatar-block-row .avatar-card{
+        width: calc(100% / 2);
+    }
+    .choose-avatar-modal .btn-block{
+        padding-top: 0;
+    }
+}
+@media($sm-579){
+    .choose-avatar-modal .choose-avatar-modal-body {
+        padding: 0 0 20px;
     }
 }
