--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -7,6 +7,7 @@ $green: #0DAD4D;
 $text-primary-dark: #2E4276;
 $text-primary-light: #8393BA;
 $primary-blue: #2966FF;
+$table-border: #F2F2FC;
 
 // Font stack
 //––––––––––––––––––––––––––––––––––––––––––––––––––
