--- a/scss/common.scss
+++ b/scss/common.scss
@@ -610,8 +610,8 @@ button{
                 }
                 &.btn-save{
                     color: #fff;
-                    border: 1px solid $primary-dark;
-                    background: $primary-dark;
+                    border: 1px solid $blue-text-single;
+                    background: $blue-text-single;
                 }
             }
         }
