--- a/css/table.css
+++ b/css/table.css
@@ -28,18 +28,18 @@
   padding: 15px 20px;
   font-weight: 600;
   font-size: 14px;
-  color: #000;
-  border-bottom: solid 1px #E3E4F3 !important;
+  color: #2E4276;
+  border-bottom: solid 1px #F2F2FC !important;
 }
 .table-cover .custom-table .th-sort {
   padding-left: 5px;
   cursor: pointer;
 }
 .table-cover .custom-table tbody td {
-  color: #697F9B;
+  color: #8393BA;
   font-size: 15px;
   padding: 15px 20px;
-  border-color: #E3E4F3;
+  border-color: #F2F2FC;
   vertical-align: middle;
 }
 .table-cover .custom-table tbody tr.td-disable {
@@ -96,7 +96,7 @@
   color: #0C15F9;
 }
 .table-cover .custom-table .text-dark {
-  color: #383C40;
+  color: #2E4276 !important;
 }
 .table-cover .custom-table .text-light-blue {
   color: #A2A2DF;
@@ -109,10 +109,10 @@
   background-color: #fff;
   padding: 15px 30px;
   border-radius: 8px;
-  border: 1px solid #E3E4F3;
+  border: 1px solid #F2F2FC;
 }
 .table-pagination-cover .select-block {
-  color: #697F9B;
+  color: #8393BA;
   font-size: 12px;
 }
 .table-pagination-cover .select-block .pagination-select {
@@ -120,22 +120,22 @@
   box-shadow: none;
   outline: none;
   border-radius: 8px;
-  border: 1px solid #E3E4F3;
+  border: 1px solid #F2F2FC;
   background: #FFF;
-  color: #697F9B;
+  color: #8393BA;
   font-size: 12px;
   padding: 5px 7px;
   width: 55px;
 }
 .table-pagination-cover .entries-block {
-  color: #697F9B;
+  color: #8393BA;
   font-size: 12px;
 }
 .table-pagination-cover .pagination-block .pagination .page-item .page-link {
   margin: 0 4px;
   color: #ADC3DF;
   font-size: 12px;
-  border: solid 1px #E3E4F3;
+  border: solid 1px #F2F2FC;
   border-radius: 50%;
   width: 26px;
   height: 26px;
@@ -146,8 +146,8 @@
   flex-shrink: 0;
 }
 .table-pagination-cover .pagination-block .pagination .page-item .page-link.active, .table-pagination-cover .pagination-block .pagination .page-item .page-link:hover {
-  background-color: #E3E4F3;
-  color: #697F9B;
+  background-color: #F2F2FC;
+  color: #8393BA;
 }
 .table-pagination-cover .pagination-block .pagination .page-item .page-link-dots {
   margin: 0;
