--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -37,6 +37,9 @@ $blue-text-single:#3072F3;
 $sub-text-color:#768BC2;
 $border-color:#6982C0;
 $bg-color-check:#D3E3F8;
+$light-blue:#2966FF;
+$light-dark:#484D65;
+$orange:#EE8728;
 
 // Breakpoints
 //––––––––––––––––––––––––––––––––––––––––––––––––––
