--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -141,5 +141,49 @@
 .theme-dark .portfolio-sec .portfolio-card .card-table tbody tr:last-child td:last-child::after {
   display: none;
 }
+.theme-dark .login-left-block {
+  background: #000;
+}
+.theme-dark .login-left-block .logo-section-block img.logo-img {
+  display: none;
+}
+.theme-dark .login-left-block .logo-section-block img.logo-img.d-none {
+  display: block !important;
+}
+.theme-dark .login-left-block .logo-section-block .welcome-text, .theme-dark .login-left-block .logo-section-block .welcome-text h4, .theme-dark .login-left-block .logo-section-block .form-group .input-group label, .theme-dark .login-left-block .logo-section-block .bottom-content .checkbox-container {
+  color: #fff;
+}
+.theme-dark .login-left-block .form-group .input-group label {
+  color: #fff;
+}
+.theme-dark .login-left-block .form-group .input-group .form-control {
+  color: #fff !important;
+  -webkit-text-fill-color: #fff !important;
+  border: 1px solid #fff;
+}
+.theme-dark .fgt-modal .modal-content {
+  background: #000;
+}
+.theme-dark .fgt-modal .modal-dialog .modal-header .heading-top h5, .theme-dark .fgt-modal .modal-dialog .modal-header .heading-top .modal-title {
+  color: #ffffff;
+}
+.theme-dark .fgt-modal .modal-dialog .modal-header .input-group .form-control {
+  border: 1px solid #ffffff;
+}
+.theme-dark .fgt-modal .modal-dialog .modal-body .form-group .input-group label {
+  color: #ffffff;
+}
+.theme-dark .fgt-modal .modal-dialog .modal-body .form-group .input-group .form-control {
+  border: 1px solid #ffffff;
+}
+.theme-dark .success-modal .modal-dialog.modal-dialog-centered .modal-content {
+  background: #000;
+}
+.theme-dark .success-modal .modal-body .modal-title h5, .theme-dark .success-modal .modal-body .stake-detail .stake-amt .stake-amt-txt {
+  color: #9EB3CD;
+}
+.theme-dark .success-modal .modal-body .modal-title h2, .theme-dark .success-modal .modal-body .stake-detail .stake-amt .stake-rupees {
+  color: #fff;
+}
 
 /*# sourceMappingURL=dark-theme.css.map */
