--- a/css/home.css
+++ b/css/home.css
@@ -14,186 +14,151 @@
   border: 1px solid #292D32;
   background: #292D32;
   padding: 20px 55px 30px;
-  align-items: center;
-}
-.welcome-cover .content-block {
-  flex: 1 1 auto;
-}
-.welcome-cover .content-block .img-block {
-  flex-shrink: 0;
-  margin-right: 30px;
-}
-.welcome-cover .content-block .img-block img {
-  max-width: 145px;
-}
-.welcome-cover .content-block .text-block {
-  color: #fff;
-  padding-top: 15px;
-}
-.welcome-cover .content-block .text-block h4 {
-  font-size: 23px;
-  font-weight: 400;
-}
-.welcome-cover .content-block .text-block h4 span {
-  font-weight: 700;
-}
-.welcome-cover .content-block .text-block p {
-  font-size: 13px;
-  font-weight: 500;
-  color: #909AA6;
-  margin-bottom: 0;
-}
-.welcome-cover .btn-block {
-  flex: 0 0 auto;
-}
-.welcome-cover .btn-block .more-btn {
-  background-color: transparent;
-  border: solid 1px #6A7380;
-  color: #fff;
-  font-size: 14px;
-  width: 180px;
-}
-.welcome-cover .btn-block .more-btn:hover {
-  background-color: #fff;
-  color: #2E4276;
-}
+  align-items: center; }
+  .welcome-cover .content-block {
+    flex: 1 1 auto; }
+    .welcome-cover .content-block .img-block {
+      flex-shrink: 0;
+      margin-right: 30px; }
+      .welcome-cover .content-block .img-block img {
+        max-width: 145px; }
+    .welcome-cover .content-block .text-block {
+      color: #fff;
+      padding-top: 15px; }
+      .welcome-cover .content-block .text-block h4 {
+        font-size: 23px;
+        font-weight: 400; }
+        .welcome-cover .content-block .text-block h4 span {
+          font-weight: 700; }
+      .welcome-cover .content-block .text-block p {
+        font-size: 13px;
+        font-weight: 500;
+        color: #909AA6;
+        margin-bottom: 0; }
+  .welcome-cover .btn-block {
+    flex: 0 0 auto; }
+    .welcome-cover .btn-block .more-btn {
+      background-color: transparent;
+      border: solid 1px #6A7380;
+      color: #fff;
+      font-size: 14px;
+      width: 180px; }
+      .welcome-cover .btn-block .more-btn:hover {
+        background-color: #fff;
+        color: #2E4276; }
 
 .card-sec {
-  padding-top: 20px;
-}
-.card-sec .h-card-col {
-  margin-bottom: 20px;
-}
-.card-sec .h-card-block {
-  padding: 25px 40px 50px;
-  height: 100%;
-  background-color: #fff;
-  display: flex;
-  flex-direction: column;
-  color: #2E4276;
-  border-radius: 13px;
-}
-.card-sec .h-card-block .top-block {
-  flex: 1 1 auto;
-}
-.card-sec .h-card-block .bottom-block {
-  padding-top: 10px;
-  flex: 0 0 auto;
-}
-.card-sec .h-card-block .img-block {
-  margin-bottom: 20px;
-  aspect-ratio: 2.0985;
-}
-.card-sec .h-card-block .img-block img {
-  border-radius: 12px;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.card-sec .h-card-block h2 {
-  font-size: 22px;
-  margin-bottom: 20px;
-  font-weight: 600;
-}
-.card-sec .h-card-block p {
-  color: #4D6090;
-  font-size: 14px;
-}
-.card-sec .h-card-block .join-btn {
-  width: 100%;
-  background-color: #2966FF;
-  color: #fff;
-  padding: 12px 15px;
-  border: solid 1px #2966FF;
-}
-.card-sec .h-card-block .join-btn:hover {
-  background-color: #fff;
-  color: #2966FF;
-}
+  padding-top: 20px; }
+  .card-sec .h-card-col {
+    margin-bottom: 20px; }
+  .card-sec .h-card-block {
+    padding: 25px 40px 50px;
+    height: 100%;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    color: #2E4276;
+    border-radius: 13px; }
+    .card-sec .h-card-block .top-block {
+      flex: 1 1 auto; }
+    .card-sec .h-card-block .bottom-block {
+      padding-top: 10px;
+      flex: 0 0 auto; }
+    .card-sec .h-card-block .img-block {
+      margin-bottom: 20px;
+      aspect-ratio: 2.0985; }
+      .card-sec .h-card-block .img-block img {
+        border-radius: 12px;
+        width: 100%;
+        height: 100%;
+        object-fit: cover; }
+    .card-sec .h-card-block h2 {
+      font-size: 22px;
+      margin-bottom: 20px;
+      font-weight: 600; }
+    .card-sec .h-card-block p {
+      color: #4D6090;
+      font-size: 14px; }
+    .card-sec .h-card-block .join-btn {
+      width: 100%;
+      background-color: #2966FF;
+      color: #fff;
+      padding: 12px 15px;
+      border: solid 1px #2966FF; }
+      .card-sec .h-card-block .join-btn:hover {
+        background-color: #fff;
+        color: #2966FF; }
 
 @media (max-width: 1679px) {
   .card-sec .h-card-block {
-    padding: 20px 30px 40px;
-  }
+    padding: 20px 30px 40px; }
+
   .welcome-cover .content-block .text-block h4 {
-    font-size: 21px;
-  }
+    font-size: 21px; }
+
   .card-sec .h-card-block h2 {
     font-size: 19px;
-    margin-bottom: 15px;
-  }
+    margin-bottom: 15px; }
+
   .card-sec .h-card-block .join-btn {
     padding: 10px 15px;
-    font-size: 15px;
-  }
-}
+    font-size: 15px; } }
 @media (max-width: 1441px) {
   .card-sec .h-card-block {
-    padding: 15px 20px 30px;
-  }
+    padding: 15px 20px 30px; }
+
   .card-sec .h-card-block h2 {
     font-size: 17px;
-    margin-bottom: 15px;
-  }
+    margin-bottom: 15px; }
+
   .welcome-cover .content-block .text-block h4 {
-    font-size: 19px;
-  }
+    font-size: 19px; }
+
   .welcome-cover {
-    padding: 20px 55px 25px;
-  }
-}
+    padding: 20px 55px 25px; } }
 @media (max-width: 1199px) {
   .welcome-cover {
-    padding: 20px 30px 25px;
-  }
+    padding: 20px 30px 25px; }
+
   .welcome-cover .content-block .text-block h4 {
-    font-size: 18px;
-  }
-}
+    font-size: 18px; } }
 @media (max-width: 767px) {
   .card-sec .h-card-block .join-btn {
-    font-size: 14px;
-  }
-}
+    font-size: 14px; } }
 @media (max-width: 579px) {
   .welcome-cover .content-block .img-block {
     flex-shrink: 0;
-    margin-right: 10px;
-  }
+    margin-right: 10px; }
+
   .welcome-cover {
-    padding: 20px 20px 25px;
-  }
+    padding: 20px 20px 25px; }
+
   .card-sec .h-card-block {
-    padding: 15px;
-  }
+    padding: 15px; }
+
   .card-sec .h-card-block p {
-    font-size: 13px;
-  }
-}
+    font-size: 13px; } }
 @media (max-width: 479px) {
   .welcome-cover .content-block {
     flex-wrap: wrap;
-    flex-direction: column;
-  }
+    flex-direction: column; }
+
   .welcome-cover .content-block .text-block {
     order: 1;
-    padding-top: 0;
-  }
+    padding-top: 0; }
+
   .welcome-cover .content-block .img-block {
     order: 2;
     padding-top: 25px;
     text-align: center;
-    width: 100%;
-  }
-  .welcome-cover .content-block .img-block img {
-    max-width: 100%;
-  }
+    width: 100%; }
+    .welcome-cover .content-block .img-block img {
+      max-width: 100%; }
+
   .welcome-cover {
-    padding: 25px;
-  }
+    padding: 25px; }
+
   .welcome-cover .content-block .text-block p {
-    font-size: 12px;
-  }
-}
+    font-size: 12px; } }
 
 /*# sourceMappingURL=home.css.map */
